<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_actionbar"
        android:background="@drawable/login_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical" 
            android:gravity="center">
            <com.kcj.friendsearch.view.CircleImageView
                android:id="@+id/img_login_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_yousou" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/register_txt2"
                android:textColor="@color/color_theme"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>